--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Sunil Sarraf
 email: "sunilsarraf14@gmail.com"
 description: "Artist Website"
 url: "https://sunilsarraf.github.io"
-baseurl: "/my-website"
+baseurl: "/sunilsarraf.github.io"
 facebook_username: "sunil.sarraf.5"
 twitter_username: ""
 instagram_username: "sunil.sarraf.5"
