update yaml file

--- a/_config.yml
+++ b/_config.yml
@@ -34,9 +34,9 @@ comments :
 
 # Internal nav
 nav:
-  - GALLERY: "http://localhost:4000/gallery/"  
+  - GALLERY: "https://sunilsarraf.github.io/sunilsarraf.github.io/gallery/"  
   # - JOURNAL: "http://localhost:4000/journal/"
-  - ABOUT: "http://localhost:4000/about/"
+  - ABOUT: "https://sunilsarraf.github.io/sunilsarraf.github.io/about/"
 
 # All translation keys
 translations:
